@@ -1,14 +1,18 @@
 package com.codestates.stackoverflowclone.security.config;
 
 import com.codestates.stackoverflowclone.security.filter.JwtAuthenticationFilter;
+import com.codestates.stackoverflowclone.security.filter.JwtVerificationFilter;
 import com.codestates.stackoverflowclone.security.jwt.JwtTokenizer;
+import com.codestates.stackoverflowclone.security.util.CustomAuthorityUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.ApplicationEventPublisher;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
+import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.crypto.factory.PasswordEncoderFactories;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
@@ -17,6 +21,7 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
 
 import static org.springframework.security.config.Customizer.withDefaults;
 
@@ -25,11 +30,13 @@ public class SecurityConfiguration {
 
     private final JwtTokenizer jwtTokenizer;
     private final ApplicationEventPublisher publisher;
+    private final CustomAuthorityUtils authorityUtils;
 
     @Autowired
-    public SecurityConfiguration(JwtTokenizer jwtTokenizer, ApplicationEventPublisher publisher) {
+    public SecurityConfiguration(JwtTokenizer jwtTokenizer, ApplicationEventPublisher publisher, CustomAuthorityUtils authorityUtils) {
         this.jwtTokenizer = jwtTokenizer;
         this.publisher = publisher;
+        this.authorityUtils = authorityUtils;
     }
 
     @Bean
@@ -39,13 +46,17 @@ public class SecurityConfiguration {
                 .and()
                 .csrf().disable()
                 .cors(withDefaults())
+                .sessionManagement().sessionCreationPolicy(SessionCreationPolicy.STATELESS)
+                .and()
                 .formLogin().disable()
                 .httpBasic().disable()
                 .apply(new CustomFilterConfigurer())
                 .and()
                 .authorizeHttpRequests(
                         //TODO 권한 설정하기
-                        authorize -> authorize.anyRequest().permitAll()
+                        authorize -> authorize
+                                .antMatchers(HttpMethod.PATCH, "/members/*").hasRole("USER")
+                                .anyRequest().permitAll()
                 );
         return http.build();
     }
@@ -59,8 +70,9 @@ public class SecurityConfiguration {
     @Bean
     CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("*"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PATCH", "DELETE"));
+        configuration.setAllowedOrigins(List.of("*"));
+        configuration.setAllowedMethods(List.of("GET", "POST", "DELETE", "PATCH"));
+        configuration.setAllowedHeaders(List.of("*"));
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
@@ -73,7 +85,11 @@ public class SecurityConfiguration {
             AuthenticationManager manager = builder.getSharedObject(AuthenticationManager.class);
             JwtAuthenticationFilter filter = new JwtAuthenticationFilter(manager, jwtTokenizer, publisher);
             filter.setFilterProcessesUrl("/login");
-            builder.addFilter(filter);
+
+            JwtVerificationFilter jwtVerificationFilter = new JwtVerificationFilter(jwtTokenizer, authorityUtils);
+
+            builder.addFilter(filter)
+                    .addFilterAfter(jwtVerificationFilter, JwtAuthenticationFilter.class);
         }
     }
 }
